--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Hexlet project #1"
 authors = ["alexander-masalov <masalenok477@gmail.com>"]
 readme = "README.md"
 packages = [{include = "brain_games"}]
+repository = "https://github.com/alexander-masalov/python-project-49"
 
 [tool.poetry.dependencies]
 python = "^3.10"
